--- a/18.03_project_1/index.html
+++ b/18.03_project_1/index.html
@@ -13,18 +13,18 @@
     <h1 id="heading">Каталог</h1>
     <div id="slider-content"></div>
 
-    <script src="/const/catalog.js"></script>
-    <script src="/const/products.js"></script>
-    <script src="/const/root.js"></script>
-    <script src="/utils/localStorage.js"></script>
+    <script src="./const/catalog.js"></script>
+    <script src="./const/products.js"></script>
+    <script src="./const/root.js"></script>
+    <script src="./utils/localStorage.js"></script>
 
-    <script src="/components/Header/Header.js"></script>
-    <link rel="stylesheet" href="/components/Header/Header.css">
+    <script src="./components/Header/Header.js"></script>
+    <link rel="stylesheet" href="./components/Header/Header.css">
 
-    <script src="/components/Slider_Content/Slider_Content.js"></script>
-    <link rel="stylesheet" href="/components/Slider_Content/Slider_Content.css">
+    <script src="./components/Slider_Content/Slider_Content.js"></script>
+    <link rel="stylesheet" href="./components/Slider_Content/Slider_Content.css">
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
-    <script src="/const/swiper.js"></script>
+    <script src="./const/swiper.js"></script>
   </body>
 </html>
