--- a/18.03_project_1/index.html
+++ b/18.03_project_1/index.html
@@ -10,7 +10,8 @@
   </head>
   <body>
     <div id="header" class="sticky"></div>
-    <h1 id="heading">Каталог</h1>
+    <div id="header_menu"></div>
+    <h1  id="heading">Каталог</h1>
     <div id="slider-content"></div>
 
     <script src="./const/catalog.js"></script>
@@ -20,6 +21,10 @@
 
     <script src="./components/Header/Header.js"></script>
     <link rel="stylesheet" href="./components/Header/Header.css">
+
+    <script src="./components/Header/Header_menu/Header-menu.js"></script>
+    <script src="./components/Header/Header_menu/Header_menu-plugin.js"></script>
+    <link rel="stylesheet" href="./components/Header/Header_menu/Header_menu.css">
 
     <script src="./components/Slider_Content/Slider_Content.js"></script>
     <link rel="stylesheet" href="./components/Slider_Content/Slider_Content.css">
