--- a/18.03_project_1/index.html
+++ b/18.03_project_1/index.html
@@ -12,14 +12,13 @@
     <div id="header" class="sticky"></div>
     <div id="header_menu"></div>
     <div id="header_card"></div>
-    <h1  id="catalog_heading">Каталог</h1>
     <div id="catalog"></div>
-    <h1  id="products_heading">Товары</h1>
     <div id="products"></div>
 
-    <script src="./const/products/c1.js"></script>
-    <script src="./const/products/c2.js"></script>
-
+    <script src="./const/products/productsArray_Dobavki.js"></script>
+    <script src="./const/products/productsArray_Korm.js"></script>
+    <script src="./const/products/productsArray_Kormushki.js"></script>
+    <script src="./const/products/productsArray_Kyratnik.js"></script>
 
     <script src="./const/catalog.js"></script>
     <script src="./const/root.js"></script>
